Almost finish work on UI improvements.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -61,12 +61,12 @@ language_name = "English"
     modified_game_speed = "(GAME WAS PLAYED WITH MODIFIED GAME SPEED)"
 
 # Settings
-    window_size		 = "WINDOW SIZE:"
-    window_size_tt   = "SETTING 'FULLSCREEN' WILL CREATE A BORDERLESS FULLSCREEN WINDOW.\nSETTING A SPECIFIC VALUE WILL FORCE A SQUARE WINDOW OF THAT SIZE."
+    display_mode     = "DISPLAY MODE:"
+    display_mode_tt  = "SETTING 'FULLSCREEN' WILL CREATE A BORDERLESS FULLSCREEN WINDOW.\nSETTING 'WINDOWED' WILL CREATE A WINDOW OF THE SIZE DEFINED BELOW."
+    windowed         = "WINDOWED"
     fullscreen		 = "FULLSCREEN"
-    refresh_rate	 = "REFRESH RATE:"
-    refresh_rate_tt  = "SETTING 'NATIVE' WILL USE THE NATIVE REFRESH RATE OF YOUR MONITOR.\nSETTING A SPECIFIC VALUE WILL FORCE THAT REFRESH RATE IN HERTZ."
-    native			 = "NATIVE"
+    window_size		 = "WINDOW SIZE:"
+    window_size_tt   = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'."
     msaa			 = "MSAA:"
     msaa_tt          = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
     primary_hue		 = "PRIMARY HUE:"
