Update gamemode editor to allow editing life fragment spawning.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -24,30 +24,36 @@ language_name = "English"
     start          = "START"
 
 # Gamemode editor
-    ball_settings       = "BALL SETTINGS"
-    player_settings     = "PLAYER SETTINGS"
-    song                = "SONG:"
-    test                = "TEST"
-    starting_count      = "STARTING COUNT:"
-    starting_count_tt   = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL."
-    max_count           = "MAX COUNT:"
-    max_count_tt        = "THE MAXIMUM ALLOWED NUMBER OF BALLS AT ONE TIME."
-    spawn_interval      = "SPAWN INTERVAL:"
-    spawn_interval_tt   = "THE INTERVAL BETWEEN TWO BALLS SPAWNING."
-    initial_size        = "INITIAL SIZE:"
-    initial_size_tt     = "THE INITIAL SIZE OF BALLS (IN UNITS)."
-    size_step           = "SIZE STEP:"
-    size_step_tt        = "AN AMOUNT ADDED TO THE SIZE OF EACH SUBSEQUENT BALL (IN UNITS)."
-    initial_velocity    = "INITIAL VELOCITY:"
-    initial_velocity_tt = "THE INITIAL VELOCITY OF BALLS (IN UNITS PER SECOND)."
-    velocity_step       = "VELOCITY STEP:"
-    velocity_step_tt    = "AN AMOUNT ADDED TO THE VELOCITY OF EACH SUBSEQUENT BALL (IN UNITS PER SECOND)."
-    starting_lives      = "STARTING LIVES:"
-    starting_lives_tt   = "THE NUMBER OF EXTRA STARTING LIVES."
-    hitbox_radius       = "HITBOX RADIUS:"
-    hitbox_size_tt      = "THE RADIUS OF THE PLAYER HITBOX (0 FOR A POINT)."
-    inertia_factor      = "INERTIA FACTOR:"
-    inertia_factor_tt   = "MOVEMENT INERTIA FACTOR (CLOSER TO 1 = MORE SLUGGISH MOVEMENT)."
+    ball_settings                   = "BALL SETTINGS"
+    player_settings                 = "PLAYER SETTINGS"
+    song                            = "SONG:"
+    test                            = "TEST"
+    starting_count                  = "STARTING COUNT:"
+    starting_count_tt               = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL."
+    max_count                       = "MAX COUNT:"
+    max_count_tt                    = "THE MAXIMUM ALLOWED NUMBER OF BALLS AT ONE TIME."
+    spawn_interval                  = "SPAWN INTERVAL:"
+    spawn_interval_tt               = "THE INTERVAL BETWEEN TWO BALLS SPAWNING."
+    initial_size                    = "INITIAL SIZE:"
+    initial_size_tt                 = "THE INITIAL SIZE OF BALLS (IN UNITS)."
+    size_step                       = "SIZE STEP:"
+    size_step_tt                    = "AN AMOUNT ADDED TO THE SIZE OF EACH SUBSEQUENT BALL (IN UNITS)."
+    initial_velocity                = "INITIAL VELOCITY:"
+    initial_velocity_tt             = "THE INITIAL VELOCITY OF BALLS (IN UNITS PER SECOND)."
+    velocity_step                   = "VELOCITY STEP:"
+    velocity_step_tt                = "AN AMOUNT ADDED TO THE VELOCITY OF EACH SUBSEQUENT BALL (IN UNITS PER SECOND)."
+    starting_lives                  = "STARTING LIVES:"
+    starting_lives_tt               = "THE NUMBER OF EXTRA STARTING LIVES."
+    spawn_life_fragments            = "SPAWN LIFE FRAGMENTS"
+    spawn_life_fragments_tt         = "WHETHER LIFE FRAGMENTS SHOULD SPAWN REGULARLY."
+    yes                             = "YES"
+    no                              = "NO"
+    life_fragment_spawn_interval    = "FRAGMENT SPAWN INTERVAL"
+    life_fragment_spawn_interval_tt = "THE INTERVAL BETWEEN TWO LIFE FRAGMENT SPAWNS."
+    hitbox_radius                   = "HITBOX RADIUS:"
+    hitbox_size_tt                  = "THE RADIUS OF THE PLAYER HITBOX."
+    inertia_factor                  = "INERTIA FACTOR:"
+    inertia_factor_tt               = "MOVEMENT INERTIA FACTOR (CLOSER TO 1 = MORE SLUGGISH MOVEMENT)."
 
 # Scoreboards
     total_playtime  = "TOTAL PLAYTIME FOR"
