Almost final v1.1.0 push.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -58,6 +58,8 @@ language_name = "English"
     inertia_factor_tt               = "MOVEMENT INERTIA FACTOR (CLOSER TO 1 = MORE SLUGGISH MOVEMENT)."
 
 # Scoreboards
+    view_times      = "VIEW TIMES"
+    view_scores     = "VIEW SCORES"
     total_playtime  = "TOTAL PLAYTIME FOR"
     no_scores_found = "(NO SCORES FOUND...)"
 
@@ -87,23 +89,23 @@ language_name = "English"
     apply 			 = "APPLY"
 
 # Pause/game over
-    paused           = "PAUSED"
-    test_paused      = "TEST PAUSED"
-    replay_paused    = "REPLAY PAUSED"
-    unpause          = "UNPAUSE"
-    game_over        = "GAME OVER"
-    time             = "TIME:"
-    score            = "SCORE:"
-    new_pb           = "NEW PERSONAL BEST!"
-    save_and_restart = "SAVE AND RESTART"
-    restart          = "RESTART"
-    save_and_quit    = "SAVE AND QUIT"
-    quit             = "QUIT"
+    paused            = "PAUSED"
+    test_paused       = "TEST PAUSED"
+    replay_paused     = "REPLAY PAUSED"
+    unpause           = "UNPAUSE"
+    game_over         = "GAME OVER"
+    time              = "TIME:"
+    score             = "SCORE:"
+    new_personal_best = "NEW PERSONAL BEST!"
+    save_and_restart  = "SAVE AND RESTART"
+    restart           = "RESTART"
+    save_and_quit     = "SAVE AND QUIT"
+    quit              = "QUIT"
 
 # Score/replay saving
     save_score  = "SAVE SCORE"
     save_replay = "SAVE REPLAY"
-    preview     = "PREVIEW:"
+    results     = "RESULTS:"
     name        = "NAME:"
     description = "DESCRIPTION:"
 
