--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -7,6 +7,8 @@ language_name = "English"
     discard       = "DISCARD"
     empty         = "(EMPTY...)"
     exit          = "EXIT"
+    off           = "OFF"
+    on            = "ON"
     personal_best = "PERSONAL BEST"
     save          = "SAVE"
 
@@ -48,8 +50,6 @@ language_name = "English"
     starting_lives_tt               = "THE NUMBER OF EXTRA STARTING LIVES."
     spawn_life_fragments            = "SPAWN LIFE FRAGMENTS"
     spawn_life_fragments_tt         = "WHETHER LIFE FRAGMENTS SHOULD SPAWN REGULARLY."
-    yes                             = "YES"
-    no                              = "NO"
     life_fragment_spawn_interval    = "FRAGMENT SPAWN INTERVAL"
     life_fragment_spawn_interval_tt = "THE INTERVAL BETWEEN TWO LIFE FRAGMENT SPAWNS."
     hitbox_radius                   = "HITBOX RADIUS:"
@@ -76,6 +76,8 @@ language_name = "English"
     fullscreen		 = "FULLSCREEN"
     window_size		 = "WINDOW SIZE:"
     window_size_tt   = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'."
+    vsync            = "V-SYNC:"
+    vsync_tt         = "VERTICAL SYNCHRONIZATION.\nTURNING IT ON PREVENTS SCREEN TEARING, BUT MAY CAUSE INPUT LAG ON SOME DISPLAYS."
     msaa			 = "MSAA:"
     msaa_tt          = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
     primary_hue		 = "PRIMARY HUE:"
