Drop legacy format support, fix shortcuts, continue reorganizing.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -33,29 +33,29 @@ language_name = "English"
     song                            = "SONG:"
     test                            = "TEST"
     starting_count                  = "STARTING COUNT:"
-    starting_count_tt               = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL."
+    starting_count_tt               = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     max_count                       = "MAX COUNT:"
-    max_count_tt                    = "THE MAXIMUM ALLOWED NUMBER OF BALLS AT ONE TIME."
+    max_count_tt                    = "THE MAXIMUM ALLOWED NUMBER OF BALLS AT ONE TIME.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     spawn_interval                  = "SPAWN INTERVAL:"
-    spawn_interval_tt               = "THE INTERVAL BETWEEN TWO BALLS SPAWNING."
+    spawn_interval_tt               = "THE INTERVAL BETWEEN TWO BALLS SPAWNING.\nHOLD SHIFT TO CHANGE BY 1S, OR HOLD CTRL TO CHANGE BY 10S."
     initial_size                    = "INITIAL SIZE:"
-    initial_size_tt                 = "THE INITIAL SIZE OF BALLS (IN UNITS)."
+    initial_size_tt                 = "THE INITIAL SIZE OF BALLS (IN UNITS).\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     size_step                       = "SIZE STEP:"
-    size_step_tt                    = "AN AMOUNT ADDED TO THE SIZE OF EACH SUBSEQUENT BALL (IN UNITS)."
+    size_step_tt                    = "AN AMOUNT ADDED TO THE SIZE OF EACH SUBSEQUENT BALL (IN UNITS).\nHOLD SHIFT TO CHANGE BY 1, OR HOLD CTRL TO CHANGE BY 2.5."
     initial_velocity                = "INITIAL VELOCITY:"
-    initial_velocity_tt             = "THE INITIAL VELOCITY OF BALLS (IN UNITS PER SECOND)."
+    initial_velocity_tt             = "THE INITIAL VELOCITY OF BALLS (IN UNITS PER SECOND).\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     velocity_step                   = "VELOCITY STEP:"
-    velocity_step_tt                = "AN AMOUNT ADDED TO THE VELOCITY OF EACH SUBSEQUENT BALL (IN UNITS PER SECOND)."
+    velocity_step_tt                = "AN AMOUNT ADDED TO THE VELOCITY OF EACH SUBSEQUENT BALL (IN UNITS PER SECOND).\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     starting_lives                  = "STARTING LIVES:"
-    starting_lives_tt               = "THE NUMBER OF EXTRA STARTING LIVES."
+    starting_lives_tt               = "THE NUMBER OF EXTRA STARTING LIVES.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     spawn_life_fragments            = "SPAWN LIFE FRAGMENTS"
     spawn_life_fragments_tt         = "WHETHER LIFE FRAGMENTS SHOULD SPAWN REGULARLY."
     life_fragment_spawn_interval    = "FRAGMENT SPAWN INTERVAL"
-    life_fragment_spawn_interval_tt = "THE INTERVAL BETWEEN TWO LIFE FRAGMENT SPAWNS."
+    life_fragment_spawn_interval_tt = "THE INTERVAL BETWEEN TWO LIFE FRAGMENT SPAWNS.\nHOLD SHIFT TO CHANGE BY 1S, OR HOLD CTRL TO CHANGE BY 10S."
     hitbox_radius                   = "HITBOX RADIUS:"
-    hitbox_size_tt                  = "THE RADIUS OF THE PLAYER HITBOX."
+    hitbox_size_tt                  = "THE RADIUS OF THE PLAYER HITBOX.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     inertia_factor                  = "INERTIA FACTOR:"
-    inertia_factor_tt               = "MOVEMENT INERTIA FACTOR (CLOSER TO 1 = MORE SLUGGISH MOVEMENT)."
+    inertia_factor_tt               = "MOVEMENT INERTIA FACTOR (CLOSER TO 1 = MORE SLUGGISH MOVEMENT).\nHOLD SHIFT TO CHANGE BY 0.05, OR HOLD CTRL TO CHANGE BY 0.10."
 
 # Scoreboards
     view_times      = "VIEW TIMES"
@@ -75,17 +75,19 @@ language_name = "English"
     windowed         = "WINDOWED"
     fullscreen		 = "FULLSCREEN"
     window_size		 = "WINDOW SIZE:"
-    window_size_tt   = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'."
+    window_size_tt   = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     vsync            = "V-SYNC:"
     vsync_tt         = "VERTICAL SYNCHRONIZATION.\nTURNING IT ON PREVENTS SCREEN TEARING, BUT MAY CAUSE INPUT LAG ON SOME DISPLAYS."
     msaa			 = "MSAA:"
     msaa_tt          = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
     primary_hue		 = "PRIMARY HUE:"
-    primary_hue_tt   = "HUE USED BY THE PLAYER CHARACTER."
+    primary_hue_tt   = "HUE USED BY THE PLAYER CHARACTER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     secondary_hue    = "SECONDARY HUE:"
-    secondary_hue_tt = "HUE USED BY NON-PLAYER ENTITIES."
+    secondary_hue_tt = "HUE USED BY NON-PLAYER ENTITIES.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     sfx_volume       = "SFX VOLUME:"
+    sfx_volume_tt    = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
     music_volume     = "MUSIC VOLUME:"
+    music_volume_tt  = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
     language         = "LANGUAGE:"
     revert 			 = "REVERT"
     apply 			 = "APPLY"
