--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,6 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
+    version_tt        = "ADDED MOUSE SENSITIVITY TO SETTINGS.\nDROPPED SUPPORT FOR V1.0 SCOREFILES.\nCLARIFIED THE EFFECT OF SHIFT AND CTRL ON THE VARIOUS SETTINGS AND GAMEMODE PARAMETERS.\nREWROTE STATE CHANGES TO BE MULTITHREADED, REDUCING LAG BETWEEN SCREEN TRANSITIONS.\nINTRODUCED A NEW CIRCLE RENDERER, IMPROVING QUALITY AT LOWER RESOLUTIONS AND IMPROVING BIG BALL PERFORMANCE.\nTRIED TO MAKE FRAME TIMES MORE STABLE WHEN PLAYING ON HIGHER FRAMERATES ON WINDOWS.\nFIXED THE SYSTEM CURSOR GETTING STUCK IN THE MIDDLE OF THE SCREEN ON WINDOWS.\nFIXED HOVERING OVER THE SCORE TEXT NOT HIDING IT.\nFIXED A LOCALIZATION PROBLEM IN THE PAUSE SCREENS."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
@@ -70,27 +71,29 @@ language_name = "English"
     modified_game_speed = "(GAME WAS PLAYED WITH MODIFIED GAME SPEED)"
 
 # Settings
-    display_mode     = "DISPLAY MODE:"
-    display_mode_tt  = "SETTING 'FULLSCREEN' WILL CREATE A BORDERLESS FULLSCREEN WINDOW.\nSETTING 'WINDOWED' WILL CREATE A WINDOW OF THE SIZE DEFINED BELOW."
-    windowed         = "WINDOWED"
-    fullscreen		 = "FULLSCREEN"
-    window_size		 = "WINDOW SIZE:"
-    window_size_tt   = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
-    vsync            = "V-SYNC:"
-    vsync_tt         = "VERTICAL SYNCHRONIZATION.\nTURNING IT ON PREVENTS SCREEN TEARING, BUT MAY CAUSE INPUT LAG ON SOME DISPLAYS."
-    msaa			 = "MSAA:"
-    msaa_tt          = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
-    primary_hue		 = "PRIMARY HUE:"
-    primary_hue_tt   = "HUE USED BY THE PLAYER CHARACTER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
-    secondary_hue    = "SECONDARY HUE:"
-    secondary_hue_tt = "HUE USED BY NON-PLAYER ENTITIES.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
-    sfx_volume       = "SFX VOLUME:"
-    sfx_volume_tt    = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
-    music_volume     = "MUSIC VOLUME:"
-    music_volume_tt  = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
-    language         = "LANGUAGE:"
-    revert 			 = "REVERT"
-    apply 			 = "APPLY"
+    display_mode         = "DISPLAY MODE:"
+    display_mode_tt      = "SETTING 'FULLSCREEN' WILL CREATE A BORDERLESS FULLSCREEN WINDOW.\nSETTING 'WINDOWED' WILL CREATE A WINDOW OF THE SIZE DEFINED BELOW."
+    windowed             = "WINDOWED"
+    fullscreen		     = "FULLSCREEN"
+    window_size		     = "WINDOW SIZE:"
+    window_size_tt       = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
+    vsync                = "V-SYNC:"
+    vsync_tt             = "VERTICAL SYNCHRONIZATION.\nTURNING IT ON PREVENTS SCREEN TEARING, BUT MAY CAUSE INPUT LAG ON SOME DISPLAYS."
+    msaa			     = "MSAA:"
+    msaa_tt              = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
+    mouse_sensitivity    = "MOUSE SENSITIVITY:"
+    mouse_sensitivity_tt = "MOUSE SENSITIVITY MULTIPLIER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
+    primary_hue		     = "PRIMARY HUE:"
+    primary_hue_tt       = "HUE USED BY THE PLAYER CHARACTER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
+    secondary_hue        = "SECONDARY HUE:"
+    secondary_hue_tt     = "HUE USED BY NON-PLAYER ENTITIES.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
+    sfx_volume           = "SFX VOLUME:"
+    sfx_volume_tt        = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
+    music_volume         = "MUSIC VOLUME:"
+    music_volume_tt      = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
+    language             = "LANGUAGE:"
+    revert 			     = "REVERT"
+    apply 			     = "APPLY"
 
 # Pause/game over
     paused            = "PAUSED"
