--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "REWROTE STATE CHANGES TO BE MULTITHREADED, REDUCING LAG BETWEEN SCREEN TRANSITIONS.\nINTRODUCED A NEW CIRCLE RENDERER, IMPROVING QUALITY AT LOWER RESOLUTIONS AND IMPROVING BIG BALL PERFORMANCE.\nADDED MOUSE SENSITIVITY TO SETTINGS.\nTRIED TO MAKE FRAME TIMES MORE STABLE WHEN PLAYING ON HIGHER FRAMERATES ON WINDOWS.\nDROPPED SUPPORT FOR V1.0 SCOREFILES. IF YOU STILL HAVE ONE, LAUNCH IT WITH BODGE V1.1 TO CONVERT IT FIRST.\nCLARIFIED THE EFFECT OF SHIFT AND CTRL ON THE VARIOUS SETTINGS AND GAMEMODE PARAMETERS.\nFIXED THE SYSTEM CURSOR GETTING STUCK IN THE MIDDLE OF THE SCREEN ON WINDOWS.\nFIXED HOVERING OVER THE SCORE TEXT NOT HIDING IT.\nFIXED THE SCORE BEING ABLE TO GO NEGATIVE.\nFIXED A LOCALIZATION PROBLEM IN THE PAUSE SCREENS."
+    version_tt        = "FIXED NAME ENTRY SCREEN NOT APPEARING AT FIRST STARTUP.\nFIXED MENU MUSIC NOT PLAYING IN SOME CASES.\nFIXED MISSING SOUND WHEN PRESSING ENTER FOR SOME INPUT WIDGETS.\nFIXED A CRASH WHEN TRYING TO USE A CUSTOM USER DIRECTORY THAT DOESN'T EXIST.\nFIXED MISSING WAYLAND SUPPORT IN THE LINUX BUILD."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
