--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "FIXED NAME ENTRY SCREEN NOT APPEARING AT FIRST STARTUP.\nFIXED MENU MUSIC NOT PLAYING IN SOME CASES.\nFIXED MISSING SOUND WHEN PRESSING ENTER FOR SOME INPUT WIDGETS.\nFIXED A CRASH WHEN TRYING TO USE A CUSTOM USER DIRECTORY THAT DOESN'T EXIST.\nFIXED MISSING WAYLAND SUPPORT IN THE LINUX BUILD."
+    version_tt        = "<TO-DO>"
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
@@ -126,5 +126,5 @@ language_name = "English"
 
 # Credits
     developed_by = "DEVELOPED BY:"
-    trdario_tt = "(Bikeshedder-in-chief)"
+    trdario_tt = "(BUGFIXER, BUGPRODUCER)"
     playtesters = "PLAYTESTERS:"
