Add "Variety" gamemode.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -49,9 +49,9 @@ language_name = "English"
     velocity_step_tt                = "AN AMOUNT ADDED TO THE VELOCITY OF EACH SUBSEQUENT BALL (IN UNITS PER SECOND).\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     starting_lives                  = "STARTING LIVES:"
     starting_lives_tt               = "THE NUMBER OF EXTRA STARTING LIVES.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
-    spawn_life_fragments            = "SPAWN LIFE FRAGMENTS"
+    spawn_life_fragments            = "SPAWN LIFE FRAGMENTS:"
     spawn_life_fragments_tt         = "WHETHER LIFE FRAGMENTS SHOULD SPAWN REGULARLY."
-    life_fragment_spawn_interval    = "FRAGMENT SPAWN INTERVAL"
+    life_fragment_spawn_interval    = "FRAGMENT SPAWN INTERVAL:"
     life_fragment_spawn_interval_tt = "THE INTERVAL BETWEEN TWO LIFE FRAGMENT SPAWNS.\nHOLD SHIFT TO CHANGE BY 1S, OR HOLD CTRL TO CHANGE BY 10S."
     hitbox_radius                   = "HITBOX RADIUS:"
     hitbox_size_tt                  = "THE RADIUS OF THE PLAYER HITBOX.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
@@ -123,6 +123,8 @@ language_name = "English"
     gm_chonk_d   = "THEY'RE ACTUALLY JUST BIG BONED."
     gm_swarm     = "SWARM"
     gm_swarm_d   = "QUICKLY DEVOLVES INTO A BULLET HELL."
+    gm_variety   = "VARIETY"
+    gm_variety_d = "A HEALTHY BLEND OF BALLS OF MANY SIZES."
 
 # Credits
     developed_by = "DEVELOPED BY:"
