Add tooltip when unable to save a gamemode.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -33,6 +33,7 @@ language_name = "English"
     player_settings                 = "PLAYER SETTINGS"
     song                            = "SONG:"
     test                            = "TEST"
+    save_tt                         = "GAMEMODE CANNOT BE SAVED WITHOUT A NAME!"
     starting_count                  = "STARTING COUNT:"
     starting_count_tt               = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     max_count                       = "MAX COUNT:"
@@ -123,6 +124,10 @@ language_name = "English"
     gm_chonk_d   = "THEY'RE ACTUALLY JUST BIG BONED."
     gm_swarm     = "SWARM"
     gm_swarm_d   = "QUICKLY DEVOLVES INTO A BULLET HELL."
+    gm_speedy    = "SPEEDY"
+    gm_speedy_d  = "TEST YOUR REFLEXES!"
+    gm_crowd     = "CROWD"
+    gm_crowd_d   = "CLAUSTROPHIC MICRODODGING."
     gm_variety   = "VARIETY"
     gm_variety_d = "A HEALTHY BLEND OF BALLS OF MANY SIZES."
 
