Add tooltip when unable to save a replay.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -33,7 +33,7 @@ language_name = "English"
     player_settings                 = "PLAYER SETTINGS"
     song                            = "SONG:"
     test                            = "TEST"
-    save_tt                         = "GAMEMODE CANNOT BE SAVED WITHOUT A NAME!"
+    save_gamemode_tt                = "GAMEMODE CANNOT BE SAVED WITHOUT A NAME!"
     starting_count                  = "STARTING COUNT:"
     starting_count_tt               = "THE STARTING NUMBER OF BALLS.\nSIZE AND VELOCITY STEPS WILL BE APPLIED AS USUAL.\nHOLD SHIFT TO CHANGE BY 5, OR HOLD CTRL TO CHANGE BY 10."
     max_count                       = "MAX COUNT:"
@@ -111,11 +111,12 @@ language_name = "English"
     quit              = "QUIT"
 
 # Score/replay saving
-    save_score  = "SAVE SCORE"
-    save_replay = "SAVE REPLAY"
-    results     = "RESULTS:"
-    name        = "NAME:"
-    description = "DESCRIPTION:"
+    save_score     = "SAVE SCORE"
+    save_replay    = "SAVE REPLAY"
+    save_replay_tt = "REPLAY CANNOT BE SAVED WITHOUT A NAME!"
+    results        = "RESULTS:"
+    name           = "NAME:"
+    description    = "DESCRIPTION:"
 
 # Built-in gamemodes
     gm_classic   = "CLASSIC"
