--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "<TO-DO>"
+    version_tt        = "MADE IT EASIER TO EARN LIVES: AFTER FAILING TO COLLECT FRAGMENTS, ONLY THE ONES MISSED WILL SPAWN NEXT TIME.\nGREATLY EXPANDED GAMEMODE MANAGEMENT OPTIONS: GAMEMODES CAN NOW BE CLONED, EDITED, AND DELETED.\nADJUSTED THE OPACITY OF THE LIVES, TIMER AND SCORE AND MADE THEM FADE OUT IF A LIFE FRAGMENT IS BEHIND THEM.\nADJUSTED BALL COLLISIONS TO MAKE SMALL BALLS LESS PRONE TO SUPERSONIC SPEEDS AFTER HITTING MUCH LARGER BALLS.\nADDED VARIOUS ADDITIONAL EXPLANATORY TOOLTIPS.\nMADE MUSIC IN REPLAYS SPEED UP OR SLOW DOWN TO MATCH THE GAMEPLAY.\nFIXED BALLS OCCASIONALLY REFLECTING IN MID-AIR DUE TO FLOATING-POINT IMPRECISION.\nFIXED BALLS RENDERING INCORRECTLY WHEN PAUSING AND EXITING A GAME WHILE THE SCREEN IS SHAKING AFTER GETTING HIT.\nFIXED SOME SETTINGS NOT APPLYING IMMEDIATELY.\nFIXED THE SCOREFILE AND SETTINGS GETTING WIPED UNDER CERTAIN CIRCUMSTANCES."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
@@ -78,6 +78,7 @@ language_name = "English"
 
 # Replays
     replay              = "REPLAY"
+    replay_tt           = "HOLD SHIFT TO SLOW DOWN THE PLAYBACK.\nHOLD CTRL TO SPEED UP THE PLAYBACK."
     no_replays_found    = "(NO REPLAYS FOUND...)"
     exited_prematurely  = "(GAME WAS EXITED PREMATURELY)"
     modified_game_speed = "(GAME WAS PLAYED WITH MODIFIED GAME SPEED)"
