Add Focus and Variety, rebalance Classic and Chonk.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "MADE IT EASIER TO EARN LIVES: AFTER FAILING TO COLLECT FRAGMENTS, ONLY THE ONES MISSED WILL SPAWN NEXT TIME.\nGREATLY EXPANDED GAMEMODE MANAGEMENT OPTIONS: GAMEMODES CAN NOW BE CLONED, EDITED, AND DELETED.\nADJUSTED THE OPACITY OF THE LIVES, TIMER AND SCORE AND MADE THEM FADE OUT IF A LIFE FRAGMENT IS BEHIND THEM.\nADJUSTED BALL COLLISIONS TO MAKE SMALL BALLS LESS PRONE TO SUPERSONIC SPEEDS AFTER HITTING MUCH LARGER BALLS.\nADDED VARIOUS ADDITIONAL EXPLANATORY TOOLTIPS.\nMADE MUSIC IN REPLAYS SPEED UP OR SLOW DOWN TO MATCH THE GAMEPLAY.\nMADE KEYBOARD SHORTCUTS MORE STANDARDIZED (Ctrl+S FOR SAVING, Q FOR QUITTING...).\nFIXED BALLS OCCASIONALLY REFLECTING IN MID-AIR DUE TO FLOATING-POINT IMPRECISION.\nFIXED BALLS RENDERING INCORRECTLY WHEN PAUSING AND EXITING A GAME WHILE THE SCREEN IS SHAKING AFTER GETTING HIT.\nFIXED SOME SETTINGS NOT APPLYING IMMEDIATELY.\nFIXED THE SCOREFILE AND SETTINGS GETTING WIPED UNDER CERTAIN CIRCUMSTANCES."
+    version_tt        = "ADDED THREE NEW GAMEMODES (AND MUSIC TRACKS): SPEEDY, FOCUS, AND VARIETY.\nREBALANCED CLASSIC AND CHONK TO SCALE SOMEWHAT LESS DRASTICALLY OVER TIME.\nMADE IT EASIER TO EARN LIVES: AFTER FAILING TO COLLECT FRAGMENTS, ONLY THE ONES MISSED WILL SPAWN NEXT TIME.\nGREATLY EXPANDED GAMEMODE MANAGEMENT OPTIONS: GAMEMODES CAN NOW BE CLONED, EDITED, AND DELETED.\nADJUSTED THE OPACITY OF THE LIVES, TIMER AND SCORE AND MADE THEM FADE OUT IF A LIFE FRAGMENT IS BEHIND THEM.\nADJUSTED BALL COLLISIONS TO MAKE SMALL BALLS LESS PRONE TO SUPERSONIC SPEEDS AFTER HITTING MUCH LARGER BALLS.\nADDED VARIOUS ADDITIONAL EXPLANATORY TOOLTIPS.\nMADE MUSIC IN REPLAYS SPEED UP OR SLOW DOWN TO MATCH THE GAMEPLAY.\nMADE KEYBOARD SHORTCUTS MORE STANDARDIZED (Ctrl+S FOR SAVING, Q FOR QUITTING...).\nFIXED BALLS OCCASIONALLY REFLECTING IN MID-AIR DUE TO FLOATING-POINT IMPRECISION.\nFIXED BALLS RENDERING INCORRECTLY WHEN PAUSING AND EXITING A GAME WHILE THE SCREEN IS SHAKING AFTER GETTING HIT.\nFIXED SOME SETTINGS NOT APPLYING IMMEDIATELY.\nFIXED THE SCOREFILE AND SETTINGS GETTING WIPED UNDER CERTAIN CIRCUMSTANCES."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
@@ -139,8 +139,8 @@ language_name = "English"
     gm_swarm_d   = "QUICKLY DEVOLVES INTO A BULLET HELL."
     gm_speedy    = "SPEEDY"
     gm_speedy_d  = "TEST YOUR REFLEXES!"
-    gm_crowd     = "CROWD"
-    gm_crowd_d   = "CLAUSTROPHIC MICRODODGING."
+    gm_focus     = "FOCUS"
+    gm_focus_d   = "CLAUSTROPHIC MICRODODGING."
     gm_variety   = "VARIETY"
     gm_variety_d = "A HEALTHY BLEND OF BALLS OF MANY SIZES."
 
