Better player skin support.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "SLIGHTLY REBALANCED SWARM AND FIXED AN OVERSIGHT IN FOCUS."
+    version_tt        = "ADDED SUPPORT FOR CUSTOM PLAYER SKINS.\nFIXED THE GAME AWKWARDLY HANGING WHEN TRANSITIONING TO A STATE THAT TAKES A LONG TIME TO LOAD."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
@@ -92,10 +92,12 @@ language_name = "English"
     window_size_tt       = "SIZE OF THE WINDOW IN PIXELS, ONLY APPLICABLE IF ABOVE IS SET TO 'WINDOWED'.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     vsync                = "V-SYNC:"
     vsync_tt             = "VERTICAL SYNCHRONIZATION.\nTURNING IT ON PREVENTS SCREEN TEARING, BUT MAY CAUSE INPUT LAG ON SOME DISPLAYS."
-    msaa			     = "MSAA:"
-    msaa_tt              = "MULTISAMPLING ANTI-ALIASING.\nSETTING A HIGHER VALUE MAY LOOK BETTER, BUT PERFORM WORSE."
     mouse_sensitivity    = "MOUSE SENSITIVITY:"
     mouse_sensitivity_tt = "MOUSE SENSITIVITY MULTIPLIER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
+    player_skin          = "PLAYER SKIN:"
+    player_skin_tt       = "SKIN USED BY THE PLAYER CHARACTER.\nSKINS ARE PULLED FROM IMAGES IN THE 'SKINS' SUBDIRECTORY OF THE USER DIRECTORY."
+    none                 = "(NONE)"
+    unknown              = "(UNKNOWN)"
     primary_hue		     = "PRIMARY HUE:"
     primary_hue_tt       = "HUE USED BY THE PLAYER CHARACTER.\nHOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 100."
     secondary_hue        = "SECONDARY HUE:"
@@ -105,6 +107,7 @@ language_name = "English"
     music_volume         = "MUSIC VOLUME:"
     music_volume_tt      = "HOLD SHIFT TO CHANGE BY 10, OR HOLD CTRL TO CHANGE BY 25."
     language             = "LANGUAGE:"
+    language_tt          = "LANGUAGE OF THE USER INTERFACE.\nLANGUAGES ARE PULLED FROM LOCALIZATION FILES IN THE 'LOCALIZATION' SUBDIRECTORY OF THE USER DIRECTORY."
     revert 			     = "REVERT"
     apply 			     = "APPLY"
 
