Sync in-game patch notes to the readme ones.

--- a/data/localization/en.txt
+++ b/data/localization/en.txt
@@ -20,7 +20,7 @@ language_name = "English"
     scoreboards       = "SCOREBOARDS"
     settings          = "SETTINGS"
     credits           = "CREDITS"
-    version_tt        = "ADDED SUPPORT FOR CUSTOM PLAYER SKINS.\nFIXED THE GAME AWKWARDLY HANGING WHEN TRANSITIONING TO A STATE THAT TAKES A LONG TIME TO LOAD."
+    version_tt        = "ADDED SUPPORT FOR CUSTOM PLAYER SKINS.\nREMOVED MSAA FROM THE SETTINGS.\nFIXED THE GAME AWKWARDLY HANGING WHEN TRANSITIONING TO A STATE THAT TAKES A LONG TIME TO LOAD."
 
 # Start game screen
     no_description = "(NO DESCRIPTION...)"
